with error estimation

--- a/ML report Omri & Hila.ipynb
+++ b/ML report Omri & Hila.ipynb
@@ -10,7 +10,10 @@
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split \n",
-    "from sklearn.linear_model import LogisticRegression "
+    "from sklearn.linear_model import LogisticRegression \n",
+    "from sklearn.preprocessing import OneHotEncoder,StandardScaler\n",
+    "from sklearn.feature_selection import SelectFromModel\n",
+    "from sklearn.model_selection import cross_val_score"
    ]
   },
   {
@@ -946,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -983,6 +986,56 @@
     "lr_model = LogisticRegression()\n",
     "lr_model.fit(x_train,y_train)\n",
     "print('Accuracy of logistic regression model: {:.3f}'.format(lr_model.score(x_test,y_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Re-encoding ordinal variable as multiple boolean parameters:\n",
+    "enc = OneHotEncoder(handle_unknown = \"ignore\")\n",
+    "enc.fit(np.arange(1,7).reshape(-1,1))\n",
+    "x=enc.transform(ordinal_data.grade.reshape(-1,1)).toarray()\n",
+    "selected_data = selected_data.join(pd.DataFrame(x,columns=['A','B','C','D','E','F']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler().fit(x_train)\n",
+    "lr_model = LogisticRegression(penalty='l1')\n",
+    "x_train,x_test_val,y_train,y_test_val = train_test_split(selected_data,loan_status,test_size=0.4,random_state=0)\n",
+    "x_test,x_val,y_test,y_val = train_test_split(x_test_val,y_test_val,test_size=0.5,random_state=0)\n",
+    "scaler = StandardScaler().fit(x_train)\n",
+    "lr_model.fit(scaler.transform(x_train),y_train)\n",
+    "print('Accuracy of logistic regression model: {:.3f}'.format(lr_model.score(scaler.transform(x_test),y_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Variable selection:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Error estimation - cross validation:\n",
+    "scaled_data = StandardScaler().fit(selected_data)\n",
+    "scores = cross_val_score(lr_model,scaled_data.transform(selected_data),loan_status,cv=5)\n",
+    "\n",
+    "print(\"Accuracy: %0.2f (+/- %0.2f)\" % (scores.mean(), scores.std() * 2))"
    ]
   },
   {
